# django-linkcheck

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGELOG  LICENSE  MANIFEST  MANIFEST.in  README.rst  __init__.py  cron.py  forms.py  index.html  listeners.py  models.py  notifications.py  path.py  pyproject.toml  readme.txt  runtests.py  settings.py  setup.py  tests.py  urls.py  utils.py  views.py
.github/workflows/: linting.yml  test.yml
examples/: linkcheck_config.py  linklists.py
linkcheck/: __init__.py  admin_blocks.py  apps.py  build_meta.py  cron.py  dashboard.py  dashboard_extra_modules.py  filebrowser.py  linkcheck_settings.py  listeners.py  migrations  models.py  notifications.py  tests.py  urls.py  utils.py  views.py
linkcheck/admin/: __init__.py  link_admin.py  url_admin.py
linkcheck/locale/de/LC_MESSAGES/: django.po
linkcheck/locale/fr/LC_MESSAGES/: django.po
linkcheck/management/commands/: checkexternal.py  checkinternal.py  checklinks.py  findlinks.py  linkcheck_suggest_config.py  sendreports.py  unignore_links.py
linkcheck/migrations/: 0001_initial.py  0002_url_redirect_to.py  0003_alert_mail.py  0003_redirect_to_as_textfield.py  0004_auto_20161205_1546.py  0004_remove_url_still_exists.py  0005_alter_link_id_alter_url_id.py  0005_default_big_auto_field.py  0006_url_add_status_code.py  0007_url_add_redirect_status_code.py  0008_url_add_anchor_status.py  0009_url_add_ssl_status.py  0010_url_add_error_message.py  0011_add_verbose_names.py  0011_link_add_content_object_index.py
linkcheck/south_migrations/: 0001_initial.py  0002_url_redirect_to.py  0004_auto__chg_field_url_status.py  0005_auto__add_field_link_alert_mails_count.py
linkcheck/static/linkcheck/css/: style.css  styles.css
linkcheck/static/linkcheck/js/: actions.js  script.js
linkcheck/templates/linkcheck/: base_linkcheck.html  coverage.html  mail_report.html  mail_report.txt  paginator.html  paginator.xhtml  report.html  suggested_configs.html  suggested_linklist.html
linkcheck/templatetags/: linkcheck_admin_tags.py  linkcheck_coverage_tags.py  linkcheck_model_tags.py
linkcheck/tests/: __init__.py  test_linkcheck.py  test_urls.py  urls.py
linkcheck/tests/sampleapp/: admin.py  fixture.json  linklists.py  models.py  views.py
management/commands/: checkexternal.py  checkinternal.py  checklinks.py  findlinks.py
templates/: base_linkcheck.html  fix.html  index.html  paginator.xhtml  report.html
templates/linkcheck/: base_linkcheck.html
