[build-system]
requires = ["setuptools>=61.2"]
build-backend = "build_meta"
backend-path = ["linkcheck"]

[project]
name = "django-linkcheck"
version = "2.3.0"
authors = [
    {name = "Andy Baker",    email = "andy@andybak.net"},
    {name = "Fruits Chen",   email = "fruitschen@gmail.com"},
    {name = "Tim Graves",    email = "gravesit@gmail.com"},
    {name = "Jannis Leidel", email = "jannis@leidel.info"},
    {name = "Claude Paroz",  email = "claude@2xlibre.net"},
    {name = "Timo Brembeck", email = "opensource@timo.brembeck.email"}
]
description = "A Django app that will analyze and report on links in any model that you register with it."
readme = "README.rst"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
]
license = {text = "BSD-3-Clause"}
requires-python = ">=3.9"
dependencies = [
    "django>=4.2",
    "requests",
]

[project.urls]
Homepage = "https://github.com/DjangoAdminHackers/django-linkcheck"
Issues = "https://github.com/DjangoAdminHackers/django-linkcheck/issues"
Changelog = "https://github.com/DjangoAdminHackers/django-linkcheck/blob/master/CHANGELOG"

[project.optional-dependencies]
dev = [
    "build",
    "flake8",
    "isort",
    "pre-commit",
    "requests_mock",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["linkcheck*"]
